<resources>
  <string name="app_name">TaxiQ</string>

  <string name="number">%d</string>

  <!--Version and Terms-->
  <string name="error">Unable to connect to TaxiQ system. Please try again later.</string>
  <string name="please_check_internet_connection">Please check your Internet connection.</string>
  <string name="terms_failed">Required terms and conditions check failed.</string>
  <string name="app_out_of_date">App version out of date.</string>
  <string name="redirect_to_google_play">You will be redirected to the App Store.</string>
  <string name="retry">Retry</string>
  <string name="i_agree">I Agree</string>
  <string name="terms">Terms and Conditions</string>

  <!--Notification-->
  <string name="notification">App Active</string>
  <string name="notification_connectivity">No Internet Connection</string>
  <string name="internet_lost">Internet Connection Lost</string>
  <string name="internet_reestablished">Internet Connection Reestablished</string>

  <!--Debug-->
  <string name="debug">Debug</string>

  <!--Tab Bar-->
  <string name="flights_fragment_name">Flights</string>
  <string name="lot_status_fragment_name">Lot Status</string>
  <string name="trip_fragment_name">Trip</string>

  <string name="terminals_tab_title">Terminal Status</string>
  <string name="lot_status_tab_title">Holding Lot</string>
  <string name="trip_tab_title">Trip Status</string>

  <!--Login-->
  <string name="login">Login</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="unsuccessful_login">Incorrect username and/or password.</string>
  
  <!--Notifications-->
  <string name="notifications_title">Notifications</string>
  <string name="cone_notification">Enable Cone Notifications</string>
  <string name="debug_notification">Enable Debug Notifications</string>
  <string name="localdev_notification">Enable Localdev Notifications</string>

  <!--Security-->
  <string name="security">Security</string>

  <!--Settings-->
  <string name="audio_setting_title">Enable Audio Prompts</string>
  <string name="automatic_restart">Restart App on Low Memory</string>
  <string name="automatic_restart_warning">If your phone runs low on memory because too many other
  apps are running or the TaxiQ app is in the background, the TaxiQ may terminate and
    be unable to validate short trips.</string>
  <string name="feedback">Feedback</string>
  <string name="settings">Settings</string>
  <string name="logout">Logout</string>
  <string name="are_you_sure">Are you sure?</string>
  <string name="logged_in">Logged in</string>
  <string name="logged_in_as">Logged in as: %1$s. Version: %2$s</string>

  <!--Location Settings Error Messages-->
  <string name="gps_required">This app requires GPS for high accuracy location data. Please
  turn on GPS in Settings.</string>
  <string name="dont_mock_me">Please disable Mock Locations.</string>
  <string name="airplane_mode_off">Airplane mode cannot be on in Settings.</string>

  <!--Lot-->
  <string name="taxis_in_lot">Taxis in lot</string>
  <string name="full">Full</string>
  <string name="placed_at">Placed at</string>

  <!--Flight Status-->
  <string name="flight_status_arrivals">Arrivals</string>
  <string name="flight_status_departures">Departures</string>

  <!--Refresh Timer-->
  <string name="last_updated_less_than_a_minute_ago">Last updated less than a minute ago</string>
  <string name="last_updated_a_minute_ago">Last updated a minute ago</string>
  <string name="last_updated_x_minutes_ago">Last updated %1$d minutes ago</string>

  <!--Terminal Summary-->
  <string name="terminal_one">Terminal 1</string>
  <string name="terminal_two">Terminal 2</string>
  <string name="terminal_three">Terminal 3</string>
  <string name="terminal_intl">International</string>
  <string name="total">Total</string>
  <string name="terminals">Terminals</string>
  <string name="flights">Flights</string>
  <string name="flights_in">Flights In</string>
  <string name="hours">%dh</string>
  <string name="ago">Ago</string>

  <!--Trip Visual-->
  <string name="location_services_required">Location services required.</string>
  <string name="sfo_garage_entry_required_prior_to_next_trip">SFO garage entry required prior to next trip.</string>
  <string name="trip_pending_until_exit_from_sfo">Trip pending until exit from SFO.</string>
  <string name="trip_in_progress">Trip in progress.</string>

  <!--Trip Audio-->
  <string name="location_services_must_be_turned_on_in_order_to_monitor_your_trip">Location services must be turned on in order to monitor your trip.</string>
  <string name="the_trip_has_started_and_will_be_monitored">The trip has started and will be monitored.</string>
  <string name="the_trip_will_start_when_the_vehicle_exits_sfo">The trip will start when the vehicle exits SFO.</string>
  <string name="waiting_for_dispatch">Waiting for dispatch.</string>

  <!--Notification Short Trip Visual-->
  <string name="valid_short_trip">Valid short trip\n%1$s</string>

  <!--Notification Short Trip Audio-->
  <string name="the_trip_has_ended_and_was_recorded_as_a_valid_short_trip">The trip has ended and was recorded as a valid short trip.</string>

  <!--Notification Long Trip Visual-->
  <string name="long_trip_duration_exceeded_two_hours">Long trip.\nDuration exceeded two hours.</string>
  <string name="long_trip_vehicle_mismatch">Long trip.\nVehicle mismatch.</string>
  <string name="long_trip_card_error">Long trip.\nCard error.</string>
  <string name="long_trip_phone_error">Long Trip.\nPhone Error.</string>
  <string name="long_trip_outside_geofence">Long trip.\nOutside geofence.</string>
  <string name="long_trip_location_services_unavailable">Long trip.\nLocation services unavailable.</string>
  <string name="long_trip_network_failure">Network failure</string>
  <string name="long_trip_user_logged_out">Long trip.\nUser logged out.</string>
  <string name="long_trip_app_quit">App quit</string>
  <string name="long_trip_app_crash">App crash</string>
  <string name="long_trip_unknown">Unknown</string>

  <!--Notification Long Trip Audio-->
  <string name="long_trip_the_duration_exceeded_two_hours">The trip has ended and was recorded as a long trip. The duration exceeded two hours.</string>
  <string name="long_trip_the_vehicle_at_the_start_was_not_the_same_at_the_end_of_the_trip">The trip has ended and was recorded as a long trip. The vehicle at the start was not the same at the end of the trip.</string>
  <string name="long_trip_the_card_tapped_at_the_start_was_not_identified_at_the_end_of_the_trip">The trip has ended and was recorded as a long trip. The card tapped at the start was not identified at the end of the trip.</string>
  <string name="long_trip_the_phone_at_the_start_was_not_identified_at_the_end_of_the_trip">The trip has ended and was recorded as a long trip. The phone at the start was not identified at the end of the trip.</string>
  <string name="long_trip_the_vehicle_was_located_outside_the_geofence_while_trip_was_in_progress">The trip has ended and was recorded as a long trip. The vehicle was located outside the geofence while trip was in progress.</string>
  <string name="long_trip_location_based_services_were_unavailable_while_the_trip_was_in_progress">The trip has ended and was recorded as a long trip. Location based services were unavailable while the trip was in progress.</string>
  <string name="long_trip_logout_occurred_while_the_trip_was_in_progress">The trip has ended and was recorded as a long trip. Logout occurred while the trip was in progress.</string>

  <!--Count Down Visual-->
  <string name="short_trip_expires_in">Short Trip expires in</string>
  <string name="countdown_format">%1$01dh %2$02dm %3$02ds</string>

  <!--ACCESSIBILITY-->
  <string name="content_desc_arrow">arrow</string>
  <string name="content_desc_trip_image">trip image</string>
  <string name="content_desc_cone">cone</string>
  <string name="content_desc_circles">circles</string>

  <!--FLIGHT STATUS-->
  <string name="flight_status_ontime">ON TIME</string>
  <string name="flight_status_delayed">DELAYED</string>
  <string name="flight_status_landed">LANDED</string>
  <string name="flight_status_landing">LANDING</string>
  <string name="flight_status_scheduled">Scheduled:</string>
  <string name="flight_status_estimated">Estimated:</string>

</resources>
