<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"/>

  <RelativeLayout
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_weight="15">

    <ImageView
        android:id="@+id/img_circles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_desc_circles"
        android:scaleType="fitCenter"
        tools:src="@drawable/bg_circles"/>

    <TextView
        android:id="@+id/text_taxis"
        fontPath="fonts/OpenSans-Semibold.ttf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/lot_text_blue"
        android:textSize="120sp"
        android:textStyle="bold"
        tools:text="@string/number"
        tools:ignore="MissingPrefix"/>

  </RelativeLayout>

  <Space
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_weight="1"/>

  <TextView
      android:id="@+id/text_taxi_caption"
      fontPath="fonts/OpenSans-Semibold.ttf"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="5"
      android:background="@color/lot_bg_blue"
      android:gravity="center"
      android:text="@string/taxis_in_lot"
      android:textAllCaps="true"
      android:textColor="@color/lot_text_blue"
      android:textSize="32sp"
      android:textStyle="bold"
      android:visibility="invisible" tools:ignore="MissingPrefix"/>

</LinearLayout>