<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      fontPath="fonts/OpenSans-Regular.ttf"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/orange_cone"
      android:gravity="center"
      android:padding="20dp"
      android:text="@string/full"
      android:textAllCaps="true"
      android:textColor="@android:color/white"
      android:textSize="42sp"
  />

  <ImageView
      android:id="@+id/img_cone"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:background="@android:color/white"
      android:contentDescription="@string/content_desc_cone"
      android:padding="40dp"
      android:scaleType="centerInside"
      tools:src="@drawable/cone"
  />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/gray_textview_bg"
      android:orientation="vertical"
      android:padding="20dp">

    <TextView
        fontPath="fonts/OpenSans-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/placed_at"
        android:textColor="@color/textview_gray"
        android:textSize="28sp"
    />

    <TextView
        android:id="@+id/text_last_updated"
        fontPath="fonts/OpenSans-Semibold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/lot_text_blue"
        android:textSize="36sp"
    />

  </LinearLayout>

</LinearLayout>