<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical" >

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="top"
      android:scaleType="fitXY"
      android:src="@drawable/blue_gradient_bg" />

  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      >

    <ImageView
        android:id="@+id/edittext_logo"
        android:src="@drawable/sfo_logo2"
        android:layout_marginTop="75dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:colorControlNormal="#FFFFFF"
        android:colorControlActivated="#FFFFFF"
        android:colorControlHighlight="#FFFFFF"
        android:singleLine="true"
        android:lines="1"
        android:imeOptions="actionNext"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:colorControlNormal="#FFFFFF"
        android:colorControlActivated="#FFFFFF"
        android:colorControlHighlight="#FFFFFF"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:background="@color/auth_alpha_white"
        android:text="@string/login"/>

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#FFFFFF"
        android:layout_gravity="center" />

  </LinearLayout>
</FrameLayout>